# flake8-sqlalchemy2

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test.py  tox.ini
.github/workflows/: main.yml
src/flake8_sqlalchemy2/: __init__.py  checker.py
tests/: test_SA201.py  test_SA202.py  test_SA203.py  test_flake8_sqlalchemy2.py
